--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <td style="padding:0px">
               <br><br>
               <div>
-                <script type='text/javascript' id='clustrmaps' src='https://clustrmaps.com/site/1c2md'></script>
+                <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=bqvXDgMuKZCrCZYT2Wh6KGPxri2jjl9cxis6tO7DjI4&cl=ffffff&w=a"></script>
               </div>
           </td>
       </tr>
