--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <p><a href="https://dynamic-verse.github.io/" id="DynamicVerse">
       <heading>DynamicVerse: Physically-Aware Multimodal Modeling for Dynamic 4D Worlds</heading></a><br>
       Kairun Wen*, <u>Yuzhi Huang*</u>, Runyu Chen, Hui Zheng, Yunlong Lin, Panwang Pan, Chenxin Li, Wenyan Cong, Jian Zhang, Justin Theiss, Yue Huang, Xinghao Ding, Rakesh Ranjan, Zhiwen Fan<br>
-      NeurIPS 2025 <br>
+      Preprint <br>
       </p>
 
       <div class="paper" id="DynamicVerse">
