--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <tr>
     <td width="30%" valign="top"><a href="images/profile_fig/yuzhi.jpg"><img src="images/profile_fig/yuzhi.jpg" width="100%" style="border-radius:15px"></a>
     <p align=center>
-    | <a >CV</a> |
+    | <a href="https://github.com/yu2hi13/yu2hi13/blob/main/Yuzhihuang_Resume.pdf">CV</a> |
     <a href="mailto:yzhuang13@stu.xmu.edu.cn">Email</a> |
     <a href="https://github.com/yu2hi13">Github</a> |
     <br/>
