--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
     <td width="60%" valign="top">
       <p><a href="https://dynamic-verse.github.io/" id="DynamicVerse">
       <heading>DynamicVerse: Physically-Aware Multimodal Modeling for Dynamic 4D Worlds</heading></a><br>
-      Kairun Wen*, <u>Yuzhi Huang*</u>, Runyu Chen, Hui Zheng, Yunlong Lin, Panwang Pan, Chenxin Li, Wenyan Cong, Jian Zhang, Justin Theiss, Yue Huang, Xinghao Ding, Rakesh Ranjan, Zhiwen Fan<br>
-      Preprint <br>
+      <u>Kairun Wen*</u>, Yuzhi Huang*, Runyu Chen, Hui Zheng, Yunlong Lin, Panwang Pan, Chenxin Li, Wenyan Cong, Jian Zhang, Junbin Lu, Chenguo Lin, Dilin Wang, Zhicheng Yan, Hongyu Xu, Justin Theiss, Yue Huang, Xinghao Ding, Rakesh Ranjan, Zhiwen Fan<br>
+      Preprint<br>
       </p>
 
       <div class="paper" id="DynamicVerse">
