--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
       <div class="paper" id="p2sam">
       <a href="https://p2-sam.github.io/">Project</a> |
-      <a href="papers/ACM_MM2024__P2SAM.pdf">Paper</a> |
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3664647.3680628">Paper</a> |
       <a href="javascript:toggleblock('p2sam_abs')">Abstract</a> |
       <a href="https://github.com/yu2hi13/P2SAM">Code</a> 
 
