--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     </td>
     <td width="70%" valign="top" align="justify">
-      <p>I am a second-year master student in the School of Informatics at <a href="https://www.xmu.edu.cn/">Xiamen University</a>, advised by Prof. <a href="https://scholar.google.com/citations?user=k5hVBfMAAAAJ&hl=zh-CN">Xinghao Ding</a> in the SmartDSP group. I am also collaborating with Dr. <a href="https://www.ee.cuhk.edu.hk/~yxyuan/index.htm">Chenxin Li</a> from the <a href="https://vita-group.github.io/">AIM</a> group at the Chinese University of Hong Kong.
+      <p>I am a second-year master student in the School of Informatics at <a href="https://www.xmu.edu.cn/">Xiamen University</a>, advised by Prof. <a href="https://scholar.google.com/citations?user=k5hVBfMAAAAJ&hl=zh-CN">Xinghao Ding</a> in the SmartDSP group. I am also collaborating with Dr. <a href="https://chenxinli001.github.io/">Chenxin Li</a> from the <a href="https://www.ee.cuhk.edu.hk/~yxyuan/index.htm">AIM</a> group at the Chinese University of Hong Kong.
         <br>
       </p>
       
